test/cpp/empty_inc.c
// RUN: %check -e %s
#include "" // CHECK: /error: empty filename/
